--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 I am azibug
+<a href="pawo://pawo.yy.com?rid=101458" target="_blank" class="enter-btn">rid 立即进入</a>
+<a href="pawo://pawo.yy.com?roomid=101458" target="_blank" class="enter-btn">roomid 立即进入</a>
+http://pawo.yy.com/share.html?roomid=101458
