--- a/index.html
+++ b/index.html
@@ -2,3 +2,42 @@ I am azibug
 <a href="pawo://pawo.yy.com?rid=101458" target="_blank" class="enter-btn">rid 立即进入</a>
 <a href="pawo://pawo.yy.com?roomid=101458" target="_blank" class="enter-btn">roomid 立即进入</a>
 http://pawo.yy.com/share.html?roomid=101458
+<script type="text/javascript">
+// if iPod / iPhone, display install app prompt
+if (navigator.userAgent.match(/(iPhone|iPod|iPad);?/i) ||
+    navigator.userAgent.match(/android/i)) {
+  var store_loc = "itms://itunes.com/apps/raditaz";
+  var href = "/iphone/";
+  var is_android = false;
+  if (navigator.userAgent.match(/android/i)) {
+    store_loc = "http://yydl.duowan.com/mobile/yychat-android/1.0.1/yychat-1.0.1.apk";
+    href = "/android/";
+    is_android = true;
+  }
+  if (location.hash) {
+    var app_loc = "pawo://com.yy.yychat?roomid=101458";
+    if (is_android) {
+      var w = null;
+      try {
+        w = window.open(app_loc, '_blank');
+      } catch (e) {
+        // no exception
+      }
+      if (w) { window.close(); }
+      else { window.location = store_loc; }
+    } else {
+      var loadDateTime = new Date();
+      window.setTimeout(function() {
+        var timeOutDateTime = new Date();
+        if (timeOutDateTime - loadDateTime < 5000) {
+          window.location = store_loc;
+        } else { window.close(); }
+      },
+      25);
+      window.location = app_loc;
+    }
+  } else {
+    location.href = href;
+  }
+}
+</script>
