--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </HEAD>
   <BODY>
     <map name="pagepicmap">
-      <area coords="4,49,282,49,282,185,4,185" shape="polygon" href="azi://mzrb.meizhou.cn/html/2016-08/05/content_116290.htm">
+      <area coords="4,49,282,49,282,185,4,185" shape="polygon" onclick="javascript:YYClient.finishActivity();" href="azi://mzrb.meizhou.cn/html/2016-08/05/content_116290.htm">
       <area coords="290,123,345,123,345,181,290,181" shape="polygon" href="azi://mzrb.meizhou.cn/html/2016-08/05/content_116291.htm">
       <area coords="290,186,345,186,345,241,290,241" shape="polygon" href="azi://mzrb.meizhou.cn/html/2016-08/05/content_116292.htm">
       <area coords="4,196,112,196,112,286,4,286" shape="polygon" href="azi://mzrb.meizhou.cn/html/2016-08/05/content_116293.htm">
